lien page mexique + effets sejour

--- a/mexique.html
+++ b/mexique.html
@@ -64,7 +64,7 @@
         <div class="item">Malheureusement, tous les chemins d’accès aux différentes parties du site de Chichen Itza sont jalonnés de dizaines de vendeurs de souvenirs qui vous hèlent à votre passage. Pour éviter cela, arrivez à l’ouverture, ils organisent leurs étales et ne feront pas attention à vous… Mais malgré tout pas d’inquiétude, ils sont plutôt gentils et agréables et ne vous gâcheront pas la visite outre mesure… <br><hr> <br><hr></div>
         <div class="item">L’entrée au site est, quant à elle, assez chère comparativement aux autres sites mayas. Comptez une vingtaine de pesos mexicains pour le stationnement soit 1,20 euros et pas moins 145$MX pour l’entrée sur le site, soit 8,25 euros par personne environ. : <br><hr> <br><hr></div>
         <div class="item">Sachez en outre qu’il vous faudra aussi payer une taxe pour les appareils photo et autres cameras… : <br><hr>  <br><hr></div>
-        <div class="item">Petit conseil : Pour profiter au maximum de cette Merveille du Monde (et éviter les touristes -bien trop nombreux-), nous vous conseillons grandement de réserver une visite guidée au lever du soleil (Transport + Guide + Billet d’entrée). <br><hr> <br><hr> BONNE VISITE</div>
+        <div class="item">Petit conseil : Pour profiter au maximum de cette Merveille du Monde (et éviter les touristes -bien trop nombreux-), nous vous conseillons grandement de réserver une visite guidée au lever du soleil (Transport + Guide + Billet d’entrée). <br><hr> <br><hr> <strong class="bonne_visite">BONNE VISITE</strong class="bonne_visite"></div>
     </div>
     </aside>
     </main>
