--- a/sejour.html
+++ b/sejour.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/categorie.css">
+    <link rel="stylesheet" href="CSS/sejour.css">
     <title>VeggiLand</title>
 </head>
 
@@ -46,24 +46,16 @@
     </header>
 
     <main>
-    <h1>Quel séjour pour vous et votre famille ?</h1>
-
-    <section>
-        <h1 class="clignote">Une envie de fraicheur et du monde sauvage ? Pourquoi pas l'Alaska....</h1>
-        <p>Sur mesure Etats-Unis. <br >Pour composer un périple unique aux États-Unis ou pour personnaliser les itinéraires de nos circuits et autotours, optez pour un voyage sur mesure aux Etats-Unis. Vie hyperactive des mégapoles, plongée dans les parcs nationaux ou dans un paradis balnéaire, nos spécialistes passionnés vous conseillent, selon vos souhaits.</p>
-        <h1>Une envie de soleil ? Pourquoi pas le Mexique....</h1>
+    <section class="sejour">
+        <h1 class="quel_sejour">Quel séjour pour vous et votre famille ?</h1>
+        <h1 class="clignote">Envie de fraicheur et du monde sauvage ? Pourquoi pas l'Alaska....</h1>
+        <p>Sur mesure Etats-Unis. <br >Pour composer un périple unique aux États-Unis ou pour personnaliser les itinéraires de nos circuits et autotours, optez pour un voyage sur mesure aux Etats-Unis.<br>Plongée dans les parcs nationaux ou dans un paradis balnéaire, nos spécialistes passionnés vous conseillent, selon vos souhaits.</p>
+        <h1 class="clignote2">Envie de soleil ? Pourquoi pas le Mexique....</h1>
         <p> Autotour Mexique Quelle que soit votre envie d'autotour au Mexique, nos experts vous proposent des formules souples pour voyageurs indépendants et un carnet de route pointu.</p>
-        <h1>Une envie de voguer sur l'eau ? Pourquoi pas une croisière sur la Méditérannée....</h1>
-        <p><figure>
-            <figcaption>Un petit effort Leonardo</figcaption>
-            <audio
-                controls
-                src="/media/BOATRow_Ramer rapidement (ID 1513)_LS.ogg">
-                    Your browser does not support the
-                    <code>audio</code> element.
-            </audio>
-        </figure>L’Ecoship a tout pour ouvrir une nouvelle voie dans le transport maritime et le tourisme de croisières. Ce laboratoire grandeur nature pourrait bien changer positivement le visage du secteur.
-            l’Ecoship sera propulsé grâce à du GNL (gaz naturel liquéfié). Un carburant qui permet de faire chuter les émissions de gaz à effet de serre en comparaison au fioul lourd de 25%, qui rejette également 25% de Co2 en moins et qui émet 95% de particules fines en moins.
+        <h1 class="clignote3">Envie de voguer sur l'eau ? Pourquoi pas une croisière sur la Méditérannée....</h1>
+        <p>
+        <p><strong>Ecoship</strong> a tout pour ouvrir une nouvelle voie dans le transport maritime et le tourisme de croisières. Ce laboratoire grandeur nature pourrait bien changer positivement le visage du secteur.
+        l’Ecoship sera propulsé grâce à du GNL (gaz naturel liquéfié). Un carburant qui permet de faire chuter les émissions de gaz à effet de serre en comparaison au fioul lourd de 25%.
         </p>
     </section>
     <div id="ecotourisme">
@@ -71,14 +63,17 @@
             <figure>
                 <img src="img/mont-mc-kinley-parc-de-denali-alaska.jpg" alt="mont mc kinley" title="mont mc kinley">
                 <figcaption>
-                    Le mont Mc Kinley en Alaska
+                    L'Alaska
                 </figcaption>
             </figure>
         </article>
+        
         <article class="exemple_ecotourisme">
             <figure>
+                <a href="mexique.html" target="blank">
                 <img src="img/mexique site-archeologique-tulum.jpg" alt="mexique site site-archeologique-tulum" title="mexique site site-archeologique-tulum">
-                <figcaption>
+                </a>
+            <figcaption>
                     Le Mexique
                 </figcaption>
             </figure>
@@ -87,7 +82,7 @@
             <figure>
                 <img src="img/ecohip-navire.jpg" alt="ecohip" title="ecohip">
                 <figcaption>
-                    Le rêve de l’autosuffisance tout en restant écologique
+                    Le rêve de l’autosuffisance
                 </figcaption>
             </figure>
         </article>
