modif nom page chichen + lien vers yucatan

--- a/sejour.html
+++ b/sejour.html
@@ -70,7 +70,7 @@
         
         <article class="exemple_ecotourisme">
             <figure>
-                <a href="mexique.html" target="blank">
+                <a href="yucatan.html" target="blank">
                 <img src="img/mexique site-archeologique-tulum.jpg" alt="mexique site site-archeologique-tulum" title="mexique site site-archeologique-tulum">
                 </a>
             <figcaption>
