ajout liens fonctionnels

--- a/mexique.html
+++ b/mexique.html
@@ -61,9 +61,10 @@
         </nav>
     </header>
     <main>
-        <h1 id="presentation">
+        <h1>
             Mexique
         </h1>
+        <img src="img/mexique1.jpg" alt="mexique" titre="merveilleux pays" id="presentation">
         <section id="croisiere" class="categorie">
             <article class="offre">
                 <figure>
@@ -71,6 +72,7 @@
                     <img src="img/mexique-caraibes.jpg" alt="caraibes" title="caraibes">
                     <figcaption>
                         Croisière aux Caraïbes
+                        <a href="">Découvrir</a>
                     </figcaption>
                 </figure>
             </article>
@@ -80,6 +82,7 @@
                     <img src="img/mexique-caraibes.jpg" alt="caraibes" title="caraibes">
                     <figcaption>
                         Croisière aux Caraïbes
+                        <a href="">Découvrir</a>
                     </figcaption>
                 </figure>
             </article>
@@ -87,10 +90,11 @@
         <section id="sejour" class="categorie">
             <article class="offre">
                 <figure>
-                    <a href="">Découvrir</a>
+                    <a href="yucatan.html">Découvrir</a>
                     <img src="img/le yucatan jusqu'à l'le holbox.jpg" alt="yucatan" title="yucatan">
                     <figcaption>
                         Le Yucatan jusqu'à l'île Holbox
+                        <a href="yucatan.html">Découvrir</a>
                     </figcaption>
                 </figure>
             </article>
@@ -100,6 +104,7 @@
                     <img src="img/le yucatan jusqu'à l'le holbox.jpg" alt="yucatan" title="yucatan">
                     <figcaption>
                         Le Yucatan jusqu'à l'île Holbox
+                        <a href="">Découvrir</a>
                     </figcaption>
                 </figure>
             </article>
@@ -111,6 +116,7 @@
                     <img src="img/mahahual la nature à l'état sauvage.jpg" alt="mahalual" title="mahalual">
                     <figcaption>
                         Mahahuai la nature à l’état sauvage
+                        <a href="">Découvrir</a>
                     </figcaption>
                 </figure>
             </article>
@@ -120,6 +126,7 @@
                     <img src="img/mahahual la nature à l'état sauvage.jpg" alt="mahalual" title="mahalual">
                     <figcaption>
                         Mahahuai la nature à l’état sauvage
+                        <a href="">Découvrir</a>
                     </figcaption>
                 </figure>
             </article>
@@ -127,10 +134,11 @@
         <section id="visite_guidee" class="categorie">
             <article class="offre">
                 <figure>
-                    <a href="">Découvrir</a>
+                    <a href="chichen itza.html">Découvrir</a>
                     <img src="img/El-Castillo-Chichen-Itza.jpg" alt="chichen itza" title="chichen itza">
                     <figcaption>
                         Le Chichen Itza
+                        <a href="chichen itza.html">Découvrir</a>
                     </figcaption>
                 </figure>
             </article>
@@ -140,6 +148,7 @@
                     <img src="img/El-Castillo-Chichen-Itza.jpg" alt="chichen itza" title="chichen itza">
                     <figcaption>
                         Le Chichen Itza
+                        <a href="">Découvrir</a>
                     </figcaption>
                 </figure>
             </article>
