insertion lien index image clicable html et css

--- a/visites_guidees.html
+++ b/visites_guidees.html
@@ -80,15 +80,15 @@
             <figcaption>
                     Eco safari au plus proche de la faune
                 </figcaption>
-            </figure class="parc">
+            </figure>
         </article>
         <article class="exemple_ecotourisme">
-            <figure class="parc" >
+            <a href="chichen itza.html" class="img_eco_visites"><figure class="parc" >
                 <img src="img/site archéologique.jpeg" alt="site archéologique" title="site archéologique">
                 <figcaption>
                     Sites archéologiques méconnus du Mexique
                 </figcaption>
-            </figure>
+            </figure></a>
         </article>
         <article id="img_factice" class="exemple_ecotourisme">
             <figure class="parc">
