--- a/index.html
+++ b/index.html
@@ -121,9 +121,14 @@
             </article>
         </div>
         <h1 id="nous_trouver">Ou nous trouver</h1>
-        <div id="carte_maps">
+        <div id="carte_maps" >
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2721.5387474592217!2d3.1669787155108287!3d46.9903936383338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f04526ee0bf483%3A0x4a532c1a21144161!2sOnlineformapro%20-%20Access%20Code%20School!5e0!3m2!1sfr!2sfr!4v1649339235770!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <p>carte de recherche des agences</p>
+            <figure class="main_clic">
+                <img src="img/doigt.png" alt="nos agences" title="nos agences" class="clignote">
+                <figcaption class="clignote">
+                carte de recherche des agences
+            </figcaption>
+        </figure> 
         </div>
     </main>  
 </body>
