--- a/camping.html
+++ b/camping.html
@@ -12,10 +12,10 @@
 
 <body>
     <header>
-        <div class="logo">
+        <a href="index.html" class="logo">
             <img src="img/V.png" alt="logo" title="VeggiLand">
             <H1>VeggiLand</H1>
-        </div>
+        </a>
         <div id="compte_agence">
             <a href=""><img src="img/contacts.png" alt="compte" title="compte">Mon compte</a>
             <a href=""><img src="img/geolocalisation.jpg" alt="geolocalisation" title="geolocalisation">Agences</a>
@@ -31,12 +31,27 @@
                 <ul>
                     <li><a href="#" class="bouton_lien"><img src="img/contacts.png" alt="compte">Mon compte</a></li>
                     <li><a href="#" class="bouton_lien">Agence</a></li>
-                    <li><a href="#" class="bouton_lien">Croisières</a></li>
-                    <li><a href="#" class="bouton_lien">Séjour</a></li>
-                    <li><a href="#" class="bouton_lien">Camping</a></li>
-                    <li><a href="#" class="bouton_lien">Visites&nbsp;guidées</a></li>
-                    <li><a href="#" class="bouton_lien">Location</a></li>
-                    <li><a href="#" class="bouton_lien">Vol</a></li>
+                    <li><a href="croisiere.html" class="bouton_lien">Croisières</a></li>
+                    <li><a href="sejour.html" class="bouton_lien">Séjour</a></li>
+                    <li><a href="camping.html" class="bouton_lien">Camping</a></li>
+                    <li><a href="visites_guidees.html" class="bouton_lien">Visites&nbsp;guidées</a></li>
+                    <li class="deroulant">
+                        <p>Location</p>
+                        <ul class="sous_menu">
+                            <li><a href="#" class="bouton_lien">Etats-Unis</a></li>
+                            <li><a href="#" class="bouton_lien">France</a></li>
+                            <li><a href="#" class="bouton_lien">Mexique</a></li>
+                            <li><a href="#" class="bouton_lien">Mexique</a></li>
+                        </ul>
+                    </li>
+                    <li class="deroulant">
+                        <p>Pays</p>
+                        <ul class="sous_menu">
+                            <li><a href="#" class="bouton_lien">Etats-Unis</a></li>
+                            <li><a href="#" class="bouton_lien">France</a></li>
+                            <li><a href="mexique.html" class="bouton_lien">Mexique</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#" class="bouton_lien">Bons&nbsp;plans</a></li>
                     <li><a href="#" class="bouton_lien bouton_telephone"><img src="img/telephone.jpg">0948141516</a>
                     </li>
