modification footer oublié

--- a/chichen itza.html
+++ b/chichen itza.html
@@ -85,7 +85,7 @@
     </div>
     </aside>
     </main>
-    <footer class="item">
+    <footer>
         <div class="grid">
             <form id="newsletter" action="post" for="machin.php">
             <label for="mail">Recevez votre newsletter</label>
