--- a/visites_guidees.html
+++ b/visites_guidees.html
@@ -11,10 +11,10 @@
 
 <body>
     <header>
-        <div class="logo">
+        <a href="index.html" class="logo">
             <img src="img/V.png" alt="logo" title="VeggiLand">
             <H1>VeggiLand</H1>
-        </div>
+        </a>
         <div id="compte_agence">
             <a href=""><img src="img/contacts.png" alt="compte" title="compte">Mon compte</a>
             <a href=""><img src="img/geolocalisation.jpg" alt="geolocalisation" title="geolocalisation">Agences</a>
@@ -30,12 +30,27 @@
                 <ul>
                     <li><a href="#" class="bouton_lien"><img src="img/contacts.png" alt="compte">Mon compte</a></li>
                     <li><a href="#" class="bouton_lien">Agence</a></li>
-                    <li><a href="#" class="bouton_lien">Croisières</a></li>
-                    <li><a href="#" class="bouton_lien">Séjour</a></li>
-                    <li><a href="#" class="bouton_lien">Camping</a></li>
-                    <li><a href="#" class="bouton_lien">Visites&nbsp;guidées</a></li>
-                    <li><a href="#" class="bouton_lien">Location</a></li>
-                    <li><a href="#" class="bouton_lien">Vol</a></li>
+                    <li><a href="croisiere.html" class="bouton_lien">Croisières</a></li>
+                    <li><a href="sejour.html" class="bouton_lien">Séjour</a></li>
+                    <li><a href="camping.html" class="bouton_lien">Camping</a></li>
+                    <li><a href="visites_guidees.html" class="bouton_lien">Visites&nbsp;guidées</a></li>
+                    <li class="deroulant">
+                        <p>Location</p>
+                        <ul class="sous_menu">
+                            <li><a href="#" class="bouton_lien">Etats-Unis</a></li>
+                            <li><a href="#" class="bouton_lien">France</a></li>
+                            <li><a href="#" class="bouton_lien">Mexique</a></li>
+                            <li><a href="#" class="bouton_lien">Mexique</a></li>
+                        </ul>
+                    </li>
+                    <li class="deroulant">
+                        <p>Pays</p>
+                        <ul class="sous_menu">
+                            <li><a href="#" class="bouton_lien">Etats-Unis</a></li>
+                            <li><a href="#" class="bouton_lien">France</a></li>
+                            <li><a href="mexique.html" class="bouton_lien">Mexique</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#" class="bouton_lien">Bons&nbsp;plans</a></li>
                     <li><a href="#" class="bouton_lien bouton_telephone"><img src="img/telephone.jpg">0948141516</a>
                     </li>
@@ -98,33 +113,33 @@
         </article>
     </div>
     </main>
-<footer>
-    <div class="grid">
-        <form id="newsletter" action="post" for="machin.php">
-            <label for="mail">Recevez votre newsletter</label>
-            <div>
-                <input type="mail" name="mail" id="mail" placeholder="Entrez votre mail" required>
-                <input type="submit" value="OK">
+    <footer>
+        <div class="grid">
+            <form id="newsletter" action="post" for="machin.php">
+                <label for="mail">Recevez votre newsletter</label>
+                <div>
+                    <input type="mail" name="mail" id="mail" placeholder="Entrez votre mail" required>
+                    <input type="submit" value="OK">
+                </div>
+            </form>
+            <div id="informations_agence">
+                <p>
+                    Informations agence
+                </p>
+                <a href="#">Nous connaitre</a>
+                <a href="#">Nos partenaires</a>
+                <a href="#">Nos brochures</a>
             </div>
-        </form>
-        <div id="informations_agence">
-            <p>
-                Informations agence
-            </p>
-            <a href="#">Nous connaitre</a>
-            <a href="#">Nos partenaires</a>
-            <a href="#">Nos brochures</a>
+            <a href="#" id="offres_entreprise">Offres entreprises / CSE</a>
+            <a href="#" id="Nos_formules">Nos formules / Offres</a>
+            <a href="#" id="Infos_pratiques">Infos pratiques / Info covid</a>
+            <div id="paiements">
+                <img src="img/moyens de paiement.png" alt="moyens de paiement" title="paiements">
+                <img src="img/ancv.png" alt="ancv" title="ancv">
+            </div>
         </div>
-        <a href="#" id="offres_entreprise">Offres entreprises / CSE</a>
-        <a href="#" id="Nos_formules">Nos formules / Offres</a>
-        <a href="#" id="Infos_pratiques">Infos pratiques / Info covid</a>
-        <div id="paiements">
-            <img src="img/moyens de paiement.png" alt="moyens de paiement" title="paiements">
-            <img src="img/ancv.png" alt="ancv" title="ancv">
-        </div>
-    </div>
-    <p>Copyright</p>
-</footer>
+        <p>Copyright</p>
+    </footer>
 </body>
 <script src="JS/header.js"></script>
 </html>
