oublie footer et javascript corrigé sur les pages devis et yucatan

--- a/yucatan.html
+++ b/yucatan.html
@@ -124,7 +124,7 @@
             <form id="newsletter" action="post" for="machin.php">
                 <label for="mail">Recevez votre newsletter</label>
                 <div>
-                    <input type="mail" name="mail" id="mail" placeholder="Entrez votre mail">
+                    <input type="mail" name="mail" id="mail" placeholder="Entrez votre mail" required>
                     <input type="submit" value="OK">
                 </div>
             </form>
@@ -147,5 +147,5 @@
         <p>Copyright</p>
     </footer>
 </body>
-
+<script src="JS/header.js"></script>
 </html>
