creation de l'offre croisiere mediterranee et changement yucatan html + img bateau

--- a/croisiere mediterranee.html
+++ b/croisiere mediterranee.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/yucatan.css">
+    <link rel="stylesheet" href="CSS/croisiere mediterranee.css">
     <title>Yucantan</title>
 </head>
 
@@ -60,28 +60,24 @@
         </nav>
     </header>
     <main>
-        <img class="image_presentation" src="img/Le Yucatan jusqu’à l’île Holbox.jpg" alt="yucatan" titre="yucatan">
+        <img class="image_presentation" src="img/mediterranee.jpg" alt="mediterranee" titre="mediterranee">
         
-            <h1>LE YUCATAN</h1>
+            <h1>Croisière Italie, Espagne, France</h1>
             <p>Présentation</p>
         <p id="presentation">
-            Le circuit Grand Yucatan, terre Maya par excellence vous offre une diversité culturelle et naturelle
-            importante. De belles réserves naturelles, des mangroves, des lagunes, la jungle, et les incontournables
-            cenotes vous attendent. Des cités préhispaniques plus belles les unes que les autres feront partie du
-            voyage. Les villes coloniales colorées vous accueilleront les bras ouverts, et vous terminerez en beauté sur
-            les Caraïbes mexicaines, la cerise sur le gâteau de ce beau séjour.
+            Une croisière de rêve passant par différents port d'Italie, d'Espagne et de France à bord de notre Ecoship "La Méduse", à départ de Marseille. Plusieurs activités et animations vous seront proposées lors de cette croisière de 8 jours sur notre belle Méditerranée. Coté cuisine, notre équipe vous préparera chaque jours différents choix de plats pour tous les goûts. 
         </p>
         <div class="detail">
             <div class="flex-row">
                 <img class="petit_image" src="img/thematique-environnement.jpg" alt="thématique" titre="thématique">
                 <p>
-                    Thématique : Aventure, Culture, Guide privé, Nature, Plage, Rencontre
+                    Escale : Marseille, Gênes, Naples, Sicile, Malte, Bacelone
                 </p>
             </div>
             <div class="flex-row">
                 <img class="petit_image" src="img/argent.jpg" alt="argent" titre="argent">
                 <p>
-                    A partir de 3000€
+                    A partir de 650€
                 </p>
                 <p>
                     inclus
@@ -94,30 +90,37 @@
                 <div class="flex-row-inline">
                     <img class="petit_image" src="img/petit calendrier.jpg" alt="calendrier" titre="calendrier">
                     <p>
-                        15 jours / 14 nuits
+                        8 Jours
                     </p>
                 </div>
                 <div class="flex-row-inline">
-                    <img class="petit_image" src="img/avion.jpg" alt="avion" titre="avion">
+                    <img class="petit_image" src="img/bateau.png" alt="bateau" titre="bateau">
                     <p>
-                        Vol non compris
+                        L'Ecoship "La Méduse"
                     </p>
                 </div>
             </div>
         </div>
         <h2>
-            Les points forts
+            Activités
         </h2>
-        <p>
-            La balade à cheval dans l’hacienda<br>
-            Les plus grands sites Mayas du Yucatan<br>
-            La beauté de la Costa Maya<br>
-            Circuits 100% Sur-Mesure<br>
-            <br>
-            Petits hôtels de charme hautement sélectionnés<br>
-            Activités exclusives et privatives<br>
-            Guides fédéraux diplômés à votre entière disposition
-        </p>
+        <div id="info_complementaire">
+            <p>Théâtre</p>
+            <p>Cinéma</p>
+            <p>Massage</p>
+            <p>Gymnase</p>
+            <p>Casino</p>
+            <p>Coiffeur</p>
+            <p>Bibliothèque</p>
+            <p>Club ados</p>
+            <p>Piscine</p>
+            <p>Club enfants</p>
+            <p>Saune</p>
+            <p>Discothèque</p>
+            <p>Restaurant</p>
+            <p>Basket</p>
+            <p>Bar</p>
+        </div>
         
         <aside>
         <h3>Intéressé(es) ?</h3>
