ajout lien vers page croisiere mediterranee

--- a/croisiere.html
+++ b/croisiere.html
@@ -87,7 +87,7 @@
             Voyagez dans notre Ecoship à travers des destinations paradisiaques !
         </p>
         <div id="ecotourisme">
-            <a href="#" class="exemple_ecotourisme">
+            <a href="croisiere mediterranee.html" class="exemple_ecotourisme">
                 <figure>
                     <img src="img/mediterranee.jpg" alt="mediterranee" title="mediterranee">
                     <figcaption>
