--- a/index.html
+++ b/index.html
@@ -33,15 +33,7 @@
                     <li><a href="sejour.html" class="bouton_lien">Séjour</a></li>
                     <li><a href="camping.html" class="bouton_lien">Camping</a></li>
                     <li><a href="visites_guidees.html" class="bouton_lien">Visites&nbsp;guidées</a></li>
-                    <li class="deroulant">
-                        <p>Location</p>
-                        <ul class="sous_menu">
-                            <li><a href="#" class="bouton_lien">Etats-Unis</a></li>
-                            <li><a href="#" class="bouton_lien">France</a></li>
-                            <li><a href="#" class="bouton_lien">Mexique</a></li>
-                            <li><a href="#" class="bouton_lien">Mexique</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="location.html" class="bouton_lien">Location</a></li>
                     <li class="deroulant">
                         <p>Pays</p>
                         <ul class="sous_menu">
