modif image 11 location

--- a/visites_guidees.html
+++ b/visites_guidees.html
@@ -73,7 +73,7 @@
     <div id="ecotourisme">
         <article class="exemple_ecotourisme">
             <figure class="parc">
-                <img src="img/145 (2).jpg" alt="parc national de Kenai Fjords" title="parc national de Kenai Fjords">
+                <img src="img/2.jpg" alt="parc national de Kenai Fjords" title="parc national de Kenai Fjords">
                 <figcaption>
                     La faune dans les fjords de Kenai
                 </figcaption>
