lien vers camping alaska ajoute

--- a/camping.html
+++ b/camping.html
@@ -80,38 +80,38 @@
             Voici notre top 3 des pays les plus engagés pour la préservation de l’environnement à travers le tourisme.
         </p>
         <div id="ecotourisme">
-            <article class="exemple_ecotourisme">
+            <a href="#" class="exemple_ecotourisme">
                 <figure>
                     <img src="img/costa-ricawebp.webp" alt="costa-rica" title="costa-rica">
                     <figcaption>
                         Le Costa Rica
                     </figcaption>
                 </figure>
-            </article>
-            <article class="exemple_ecotourisme">
+            </a>
+            <a href="#" class="exemple_ecotourisme">
                 <figure>
                     <img src="img/kenya.jpg" alt="kenya" title="kenya">
                     <figcaption>
                         Le Kenya
                     </figcaption>
                 </figure>
-            </article>
-            <article class="exemple_ecotourisme">
+            </a>
+            <a href="camping alaska.html" class="exemple_ecotourisme">
                 <figure>
-                    <img src="img/bresil.jpg" alt="bresil" title="bresil">
+                    <img src="img/Etats-Unis camping.jpg" alt="Etats-Unis" title="Etats-Unis">
                     <figcaption>
-                        Le Brésil
+                        Les Etats-Unis
                     </figcaption>
                 </figure>
-            </article>
-            <article id="img_factice" class="exemple_ecotourisme">
+            </a>
+            <a href="#" id="img_factice" class="exemple_ecotourisme">
                 <figure>
                     <img src="img/kenya.jpg" alt="kenya" title="kenya">
                     <figcaption>
                         Le Factice
                     </figcaption>
                 </figure>
-            </article>
+            </a>
         </div>
     </main>
     <footer>
