changement header + creations dernieres pages

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <H1>VeggiLand</H1>
         </a>
         <div id="compte_agence">
-            <a href=""><img src="img/contacts.png" alt="compte" title="compte">Mon compte</a>
-            <a href=""><img src="img/geolocalisation.jpg" alt="geolocalisation" title="geolocalisation">Agences</a>
+            <a href="mon compte.html"><img src="img/contacts.png" alt="compte" title="compte">Mon compte</a>
+            <a href="#nous_trouver"><img src="img/geolocalisation.jpg" alt="geolocalisation" title="geolocalisation">Agences</a>
         </div>
         <a href=""><img src="img/telephone.jpg" alt="telephone" title="telephone">0948141516</a>
         <div class="break"></div>
@@ -27,8 +27,7 @@
             <input type="checkbox" name="mobile" id="mobile" role="button">
             <div id="menu_cache">
                 <ul>
-                    <li><a href="#" class="bouton_lien"><img src="img/contacts.png" alt="compte">Mon compte</a></li>
-                    <li><a href="#" class="bouton_lien">Agence</a></li>
+                    <li><a href="mon compte.html" class="bouton_lien"><img src="img/contacts.png" alt="compte">Mon compte</a></li>
                     <li><a href="croisiere.html" class="bouton_lien">Croisières</a></li>
                     <li><a href="sejour.html" class="bouton_lien">Séjour</a></li>
                     <li><a href="camping.html" class="bouton_lien">Camping</a></li>
@@ -37,13 +36,13 @@
                     <li class="deroulant">
                         <p>Pays</p>
                         <ul class="sous_menu">
-                            <li><a href="#" class="bouton_lien">Etats-Unis</a></li>
-                            <li><a href="#" class="bouton_lien">France</a></li>
+                            <li><a href="etats-unis.html" class="bouton_lien">Etats-Unis</a></li>
+                            <li><a href="france.html" class="bouton_lien">France</a></li>
                             <li><a href="mexique.html" class="bouton_lien">Mexique</a></li>
                         </ul>
                     </li>
-                    <li><a href="#" class="bouton_lien">Bons&nbsp;plans</a></li>
-                    <li><a href="#" class="bouton_lien bouton_telephone"><img src="img/telephone.jpg">0948141516</a>
+                    <li><a href="bons plans.html" class="bouton_lien">Bons&nbsp;plans</a></li>
+                    <li><a href="tel:+33948141516" class="bouton_lien bouton_telephone"><img src="img/telephone.jpg">0948141516</a>
                     </li>
                 </ul>
             </div>
