page france images

--- a/devis.html
+++ b/devis.html
@@ -49,6 +49,21 @@
         </nav>
     </header>
     <main>
+        <form action="post" method="php.machin"></form>
+        <div class="champ">
+        <label for="Nom">Nom</label>
+        <input type="text" id="Nom" name="Nom" required></div>
+        <div class="champ">
+        <label for="Prenom">Prénom</label>
+        <input type="text" id="Prenom" name="Prenom" required></div>
+        <div class="champ">
+            <label for="mail">Prénom</label>
+            <input type="text" id="mail" name="mail" required></div>
+            <div class="champ">
+                <label for="Prenom">Prénom</label>
+                <input type="text" id="Prenom" name="Prenom" required></div>
+
+    <form action="post"></form>
     
     <div class="container">
         <h1 class="activites">Combien de jours de rêve</h1>
